--- a/scss/dashboard.scss
+++ b/scss/dashboard.scss
@@ -74,12 +74,35 @@
                             font-size: 14px;
                             margin-bottom: 2px;
                             text-transform: capitalize;
+                            img{
+                                margin-left: 2px;
+                            }
                         }
                         h4{
                             font-size: 20px;
                             font-weight: 600;
                             margin-bottom: 0;
                         }
+                    }
+                    .date-picker-btn{
+                        border-radius: 4px;
+                        background: #E8EFFF;
+                        height: 31px;
+                        margin-left: 5px;
+                        width: 32px;
+                        @media ($sm-479) {
+                            margin-top: .5rem;
+                            margin-right: 5px;
+                            margin-left: 0;
+                        }
+                        @media (max-width: 350px) {
+                            margin-left: 5px;
+                            height: 35px;
+                            width: 40px;
+                        }
+                    }
+                    .btn-top-block{
+                        align-items: center;
                     }
                     .right-block{
                         .filter-btn-cover{
