--- a/scss/common.scss
+++ b/scss/common.scss
@@ -1089,3 +1089,9 @@ button{
         }
     }    
 }
+
+.copy-btn-def{
+    background-color: transparent;
+    padding: 3px;
+    border: none;
+}
