--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -40,7 +40,8 @@
       display: inline-block;
       border: solid 1px #2E4276;
       transform: rotate(0deg);
-      transition: .3s; }
+      transition: .3s;
+      background-size: auto; }
     .admn-dashboard-sec .dashboard-tab-cover .db-tab-btn button.collapsed::after {
       transform: rotate(180deg); }
   .admn-dashboard-sec .dashboard-tab-cover .db-tab-btn .tab-title {
@@ -176,6 +177,38 @@
     .admn-dashboard-sec .dashboard-tab-cover .db-tab-body .db-graph-card .db-graph-block .graph-sm-col {
       margin: 0 auto;
       max-width: 360px; }
+    .admn-dashboard-sec .dashboard-tab-cover .db-tab-body .db-graph-card .db-graph-block.db-graph-block-relative {
+      position: relative; }
+      .admn-dashboard-sec .dashboard-tab-cover .db-tab-body .db-graph-card .db-graph-block.db-graph-block-relative .graph-wallet-address {
+        position: absolute;
+        top: 0;
+        left: 5px;
+        width: calc(100% - 10px);
+        padding: 5px 12px;
+        border-radius: 6px;
+        background-color: #151618;
+        color: #fff;
+        z-index: 9;
+        display: flex;
+        align-items: center;
+        font-size: 14px;
+        color: #2E4276;
+        border-color: solid 1px #3B3B3B; }
+        @media (max-width: 1679px) {
+          .admn-dashboard-sec .dashboard-tab-cover .db-tab-body .db-graph-card .db-graph-block.db-graph-block-relative .graph-wallet-address {
+            font-size: 13px; } }
+        .admn-dashboard-sec .dashboard-tab-cover .db-tab-body .db-graph-card .db-graph-block.db-graph-block-relative .graph-wallet-address .address-block {
+          max-width: calc(100% - 80px); }
+        .admn-dashboard-sec .dashboard-tab-cover .db-tab-body .db-graph-card .db-graph-block.db-graph-block-relative .graph-wallet-address .copy-btn-def {
+          margin-left: auto;
+          margin-right: 8px; }
+        .admn-dashboard-sec .dashboard-tab-cover .db-tab-body .db-graph-card .db-graph-block.db-graph-block-relative .graph-wallet-address .close-btn {
+          background-color: transparent;
+          border: none;
+          padding: 3px;
+          margin-right: 0; }
+          .admn-dashboard-sec .dashboard-tab-cover .db-tab-body .db-graph-card .db-graph-block.db-graph-block-relative .graph-wallet-address .close-btn img {
+            width: 15px; }
 
 @media (max-width: 1679px) {
   .admn-dashboard-sec .admn-title {
