--- a/scss/dark-theme.scss
+++ b/scss/dark-theme.scss
@@ -1438,4 +1438,12 @@ $dark-block-2: #2B2C2E;
             filter: grayscale(1) brightness(4);
         }
     }
+    .admn-dashboard-sec .dashboard-tab-cover .db-tab-body .db-graph-card .db-graph-block.db-graph-block-relative .graph-wallet-address{
+        background-color: #151618;
+        color: #fff;
+        border-color: #3B3B3B;
+        img{
+            filter: grayscale(1) brightness(4);
+        }
+    }
 }
