--- a/scss/dashboard.scss
+++ b/scss/dashboard.scss
@@ -218,13 +218,10 @@
                     &.db-graph-block-relative{
                         position: relative;
                         .graph-wallet-address{
-                            position: absolute;
-                            top: 0;
-                            left: 5px;
-                            width: calc(100% - 10px);
+                            width: 100%;
                             padding: 5px 12px;
                             border-radius: 6px;
-                            background-color: #E8EFFF;
+                            background-color: transparent;
                             z-index: 9;
                             display: flex;
                             align-items: center;
