--- a/scss/dark-theme.scss
+++ b/scss/dark-theme.scss
@@ -1453,4 +1453,9 @@ $dark-block-2: #2B2C2E;
     :where(.css-apn68).ant-picker-dropdown .ant-picker-cell-in-view {
         color: #fff;
     }
+    :where(.css-1adbn6x).ant-picker-dropdown .ant-picker-cell.ant-picker-cell-disabled, 
+    :where(.css-apn68).ant-picker-dropdown .ant-picker-cell.ant-picker-cell-disabled{
+        color: rgba($color: #fff, $alpha: 0.25);
+        opacity: 1 !important;
+    }
 }
