--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -14,197 +14,199 @@
   font-weight: 600;
   margin-bottom: 20px;
   color: #2E4276; }
-.admn-dashboard-sec .dashboard-tab-cover .accordion-item {
-  margin-bottom: 20px; }
-.admn-dashboard-sec .dashboard-tab-cover .accordion, .admn-dashboard-sec .dashboard-tab-cover .accordion-item {
-  background: transparent;
-  border: none; }
-.admn-dashboard-sec .dashboard-tab-cover .db-tab-btn {
-  border: 1px solid #E3E4F3;
-  background-color: #fff;
-  border-radius: 12px;
-  padding: 12px 25px; }
-  .admn-dashboard-sec .dashboard-tab-cover .db-tab-btn button {
-    padding: 0;
-    background: transparent;
-    border: none;
-    box-shadow: none; }
-    .admn-dashboard-sec .dashboard-tab-cover .db-tab-btn button::after {
-      content: '';
-      width: 24px;
-      height: 24px;
-      border-radius: 50%;
-      background-image: url("../img/acc-up-arrw.svg");
-      background-position: center;
-      background-repeat: no-repeat;
-      display: inline-block;
-      border: solid 1px #2E4276;
-      transform: rotate(0deg);
-      transition: .3s;
-      background-size: auto; }
-    .admn-dashboard-sec .dashboard-tab-cover .db-tab-btn button.collapsed::after {
-      transform: rotate(180deg); }
-  .admn-dashboard-sec .dashboard-tab-cover .db-tab-btn .tab-title {
-    margin: 0;
-    font-size: 16px;
-    font-weight: 500;
-    color: #2E4276; }
-.admn-dashboard-sec .dashboard-tab-cover .db-tab-body {
-  padding: 20px 0 0; }
-  .admn-dashboard-sec .dashboard-tab-cover .db-tab-body .db-graph-col {
+.admn-dashboard-sec .dashboard-tab-cover {
+  overflow: hidden; }
+  .admn-dashboard-sec .dashboard-tab-cover .accordion-item {
     margin-bottom: 20px; }
-  .admn-dashboard-sec .dashboard-tab-cover .db-tab-body .db-graph-card {
+  .admn-dashboard-sec .dashboard-tab-cover .accordion, .admn-dashboard-sec .dashboard-tab-cover .accordion-item {
+    background: transparent;
+    border: none; }
+  .admn-dashboard-sec .dashboard-tab-cover .db-tab-btn {
     border: 1px solid #E3E4F3;
     background-color: #fff;
-    border-radius: 13px;
-    padding: 30px 40px;
-    height: 100%; }
-    .admn-dashboard-sec .dashboard-tab-cover .db-tab-body .db-graph-card .graph-title-wrapper {
-      display: flex;
-      justify-content: space-between;
-      margin-bottom: 30px; }
-      .admn-dashboard-sec .dashboard-tab-cover .db-tab-body .db-graph-card .graph-title-wrapper .graph-title-block {
-        color: #2E4276; }
-        .admn-dashboard-sec .dashboard-tab-cover .db-tab-body .db-graph-card .graph-title-wrapper .graph-title-block p {
-          font-size: 14px;
-          margin-bottom: 2px;
-          text-transform: capitalize; }
-          .admn-dashboard-sec .dashboard-tab-cover .db-tab-body .db-graph-card .graph-title-wrapper .graph-title-block p img {
-            margin-left: 2px; }
-        .admn-dashboard-sec .dashboard-tab-cover .db-tab-body .db-graph-card .graph-title-wrapper .graph-title-block h4 {
-          font-size: 20px;
-          font-weight: 600;
-          margin-bottom: 0; }
-      .admn-dashboard-sec .dashboard-tab-cover .db-tab-body .db-graph-card .graph-title-wrapper .date-picker-btn {
-        border-radius: 4px;
-        background: #E8EFFF;
-        height: 31px;
-        margin-left: 5px;
-        width: 32px; }
-        @media (max-width: 479px) {
-          .admn-dashboard-sec .dashboard-tab-cover .db-tab-body .db-graph-card .graph-title-wrapper .date-picker-btn {
-            margin-top: .5rem;
-            margin-right: 5px;
-            margin-left: 0; } }
-        @media (max-width: 350px) {
-          .admn-dashboard-sec .dashboard-tab-cover .db-tab-body .db-graph-card .graph-title-wrapper .date-picker-btn {
-            margin-left: 5px;
-            height: 35px;
-            width: 40px; } }
-      .admn-dashboard-sec .dashboard-tab-cover .db-tab-body .db-graph-card .graph-title-wrapper .btn-top-block {
-        align-items: center; }
-      .admn-dashboard-sec .dashboard-tab-cover .db-tab-body .db-graph-card .graph-title-wrapper .right-block .filter-btn-cover {
-        border-radius: 4px;
-        background: #E8EFFF;
-        padding: 5px;
-        display: flex; }
-        .admn-dashboard-sec .dashboard-tab-cover .db-tab-body .db-graph-card .graph-title-wrapper .right-block .filter-btn-cover .filter-btn {
-          margin: 1px;
-          padding: 4px 8px;
-          font-size: 11px;
-          font-weight: 500;
-          transition: .3s;
-          border-radius: 5px;
-          color: #2E4276;
-          background: #E8EFFF; }
-          .admn-dashboard-sec .dashboard-tab-cover .db-tab-body .db-graph-card .graph-title-wrapper .right-block .filter-btn-cover .filter-btn:hover {
-            background-color: #fff; }
-          .admn-dashboard-sec .dashboard-tab-cover .db-tab-body .db-graph-card .graph-title-wrapper .right-block .filter-btn-cover .filter-btn.active {
-            background-color: #2966FF;
-            color: #fff; }
-      .admn-dashboard-sec .dashboard-tab-cover .db-tab-body .db-graph-card .graph-title-wrapper .right-block .select-block .grph-legend-dropdown .dropdown-toggle {
-        border-radius: 6px;
-        border: 1px solid #E3E4F3;
-        background: #fff;
-        color: #2E4276;
-        font-family: "Poppins";
-        font-size: 10px;
-        font-style: normal;
-        font-weight: 400;
-        line-height: normal;
-        outline: none;
-        box-shadow: none;
-        padding: 8px 30px 8px 10px;
-        background-image: url(../img/drp-arrow.svg);
+    border-radius: 12px;
+    padding: 12px 25px; }
+    .admn-dashboard-sec .dashboard-tab-cover .db-tab-btn button {
+      padding: 0;
+      background: transparent;
+      border: none;
+      box-shadow: none; }
+      .admn-dashboard-sec .dashboard-tab-cover .db-tab-btn button::after {
+        content: '';
+        width: 24px;
+        height: 24px;
+        border-radius: 50%;
+        background-image: url("../img/acc-up-arrw.svg");
+        background-position: center;
         background-repeat: no-repeat;
-        background-position: 90% 12px;
-        display: inline-table;
-        display: flex;
-        align-items: center;
-        width: 100%; }
-        .admn-dashboard-sec .dashboard-tab-cover .db-tab-body .db-graph-card .graph-title-wrapper .right-block .select-block .grph-legend-dropdown .dropdown-toggle::after {
-          display: none; }
-        @media (max-width: 370px) {
-          .admn-dashboard-sec .dashboard-tab-cover .db-tab-body .db-graph-card .graph-title-wrapper .right-block .select-block .grph-legend-dropdown .dropdown-toggle {
-            width: 100%;
-            text-align: left; } }
-      .admn-dashboard-sec .dashboard-tab-cover .db-tab-body .db-graph-card .graph-title-wrapper .right-block .select-block .grph-legend-dropdown .leg-color {
         display: inline-block;
-        width: 7px;
-        height: 7px;
-        border-radius: 2px;
-        background-color: #2966FF;
-        margin-right: 8px;
-        margin-top: -2px; }
-      .admn-dashboard-sec .dashboard-tab-cover .db-tab-body .db-graph-card .graph-title-wrapper .right-block .select-block .grph-legend-dropdown .dropdown-item {
-        font-size: 12px; }
-      @media (max-width: 370px) {
-        .admn-dashboard-sec .dashboard-tab-cover .db-tab-body .db-graph-card .graph-title-wrapper .right-block .select-block .grph-legend-dropdown .dropdown-menu {
-          width: 100%; } }
-    .admn-dashboard-sec .dashboard-tab-cover .db-tab-body .db-graph-card .leg-wrapper {
-      justify-content: flex-end;
+        border: solid 1px #2E4276;
+        transform: rotate(0deg);
+        transition: .3s;
+        background-size: auto; }
+      .admn-dashboard-sec .dashboard-tab-cover .db-tab-btn button.collapsed::after {
+        transform: rotate(180deg); }
+    .admn-dashboard-sec .dashboard-tab-cover .db-tab-btn .tab-title {
+      margin: 0;
+      font-size: 16px;
+      font-weight: 500;
+      color: #2E4276; }
+  .admn-dashboard-sec .dashboard-tab-cover .db-tab-body {
+    padding: 20px 0 0; }
+    .admn-dashboard-sec .dashboard-tab-cover .db-tab-body .db-graph-col {
       margin-bottom: 20px; }
-      .admn-dashboard-sec .dashboard-tab-cover .db-tab-body .db-graph-card .leg-wrapper .leg-item {
+    .admn-dashboard-sec .dashboard-tab-cover .db-tab-body .db-graph-card {
+      border: 1px solid #E3E4F3;
+      background-color: #fff;
+      border-radius: 13px;
+      padding: 30px 40px;
+      height: 100%; }
+      .admn-dashboard-sec .dashboard-tab-cover .db-tab-body .db-graph-card .graph-title-wrapper {
         display: flex;
-        align-items: center;
-        font-size: 13px;
-        margin-bottom: 10px;
-        color: #2E4276; }
-        .admn-dashboard-sec .dashboard-tab-cover .db-tab-body .db-graph-card .leg-wrapper .leg-item:last-child {
-          margin-bottom: 0; }
-        .admn-dashboard-sec .dashboard-tab-cover .db-tab-body .db-graph-card .leg-wrapper .leg-item .leg-dot {
+        justify-content: space-between;
+        margin-bottom: 30px; }
+        .admn-dashboard-sec .dashboard-tab-cover .db-tab-body .db-graph-card .graph-title-wrapper .graph-title-block {
+          color: #2E4276; }
+          .admn-dashboard-sec .dashboard-tab-cover .db-tab-body .db-graph-card .graph-title-wrapper .graph-title-block p {
+            font-size: 14px;
+            margin-bottom: 2px;
+            text-transform: capitalize; }
+            .admn-dashboard-sec .dashboard-tab-cover .db-tab-body .db-graph-card .graph-title-wrapper .graph-title-block p img {
+              margin-left: 2px; }
+          .admn-dashboard-sec .dashboard-tab-cover .db-tab-body .db-graph-card .graph-title-wrapper .graph-title-block h4 {
+            font-size: 20px;
+            font-weight: 600;
+            margin-bottom: 0; }
+        .admn-dashboard-sec .dashboard-tab-cover .db-tab-body .db-graph-card .graph-title-wrapper .date-picker-btn {
+          border-radius: 4px;
+          background: #E8EFFF;
+          height: 31px;
+          margin-left: 5px;
+          width: 32px; }
+          @media (max-width: 479px) {
+            .admn-dashboard-sec .dashboard-tab-cover .db-tab-body .db-graph-card .graph-title-wrapper .date-picker-btn {
+              margin-top: .5rem;
+              margin-right: 5px;
+              margin-left: 0; } }
+          @media (max-width: 350px) {
+            .admn-dashboard-sec .dashboard-tab-cover .db-tab-body .db-graph-card .graph-title-wrapper .date-picker-btn {
+              margin-left: 5px;
+              height: 35px;
+              width: 40px; } }
+        .admn-dashboard-sec .dashboard-tab-cover .db-tab-body .db-graph-card .graph-title-wrapper .btn-top-block {
+          align-items: center; }
+        .admn-dashboard-sec .dashboard-tab-cover .db-tab-body .db-graph-card .graph-title-wrapper .right-block .filter-btn-cover {
+          border-radius: 4px;
+          background: #E8EFFF;
+          padding: 5px;
+          display: flex; }
+          .admn-dashboard-sec .dashboard-tab-cover .db-tab-body .db-graph-card .graph-title-wrapper .right-block .filter-btn-cover .filter-btn {
+            margin: 1px;
+            padding: 4px 8px;
+            font-size: 11px;
+            font-weight: 500;
+            transition: .3s;
+            border-radius: 5px;
+            color: #2E4276;
+            background: #E8EFFF; }
+            .admn-dashboard-sec .dashboard-tab-cover .db-tab-body .db-graph-card .graph-title-wrapper .right-block .filter-btn-cover .filter-btn:hover {
+              background-color: #fff; }
+            .admn-dashboard-sec .dashboard-tab-cover .db-tab-body .db-graph-card .graph-title-wrapper .right-block .filter-btn-cover .filter-btn.active {
+              background-color: #2966FF;
+              color: #fff; }
+        .admn-dashboard-sec .dashboard-tab-cover .db-tab-body .db-graph-card .graph-title-wrapper .right-block .select-block .grph-legend-dropdown .dropdown-toggle {
+          border-radius: 6px;
+          border: 1px solid #E3E4F3;
+          background: #fff;
+          color: #2E4276;
+          font-family: "Poppins";
+          font-size: 10px;
+          font-style: normal;
+          font-weight: 400;
+          line-height: normal;
+          outline: none;
+          box-shadow: none;
+          padding: 8px 30px 8px 10px;
+          background-image: url(../img/drp-arrow.svg);
+          background-repeat: no-repeat;
+          background-position: 90% 12px;
+          display: inline-table;
+          display: flex;
+          align-items: center;
+          width: 100%; }
+          .admn-dashboard-sec .dashboard-tab-cover .db-tab-body .db-graph-card .graph-title-wrapper .right-block .select-block .grph-legend-dropdown .dropdown-toggle::after {
+            display: none; }
+          @media (max-width: 370px) {
+            .admn-dashboard-sec .dashboard-tab-cover .db-tab-body .db-graph-card .graph-title-wrapper .right-block .select-block .grph-legend-dropdown .dropdown-toggle {
+              width: 100%;
+              text-align: left; } }
+        .admn-dashboard-sec .dashboard-tab-cover .db-tab-body .db-graph-card .graph-title-wrapper .right-block .select-block .grph-legend-dropdown .leg-color {
           display: inline-block;
           width: 7px;
           height: 7px;
-          border-radius: 50%;
+          border-radius: 2px;
           background-color: #2966FF;
-          margin-right: 15px; }
-          .admn-dashboard-sec .dashboard-tab-cover .db-tab-body .db-graph-card .leg-wrapper .leg-item .leg-dot.dot-grn {
-            background-color: #22F9B8; }
-        .admn-dashboard-sec .dashboard-tab-cover .db-tab-body .db-graph-card .leg-wrapper .leg-item img {
-          margin-left: 5px;
-          opacity: .5; }
-    .admn-dashboard-sec .dashboard-tab-cover .db-tab-body .db-graph-card .db-graph-block .graph-sm-col {
-      margin: 0 auto;
-      max-width: 360px; }
-    .admn-dashboard-sec .dashboard-tab-cover .db-tab-body .db-graph-card .db-graph-block.db-graph-block-relative {
-      position: relative; }
-      .admn-dashboard-sec .dashboard-tab-cover .db-tab-body .db-graph-card .db-graph-block.db-graph-block-relative .graph-wallet-address {
-        padding: 5px 12px;
-        border-radius: 6px;
-        background-color: transparent;
-        z-index: 9;
-        display: inline-flex;
-        align-items: center;
-        font-size: 14px;
-        color: #2E4276;
-        border: solid 1px #E3E4F3;
-        min-width: 35%; }
-        @media (max-width: 1679px) {
-          .admn-dashboard-sec .dashboard-tab-cover .db-tab-body .db-graph-card .db-graph-block.db-graph-block-relative .graph-wallet-address {
-            font-size: 13px; } }
-        .admn-dashboard-sec .dashboard-tab-cover .db-tab-body .db-graph-card .db-graph-block.db-graph-block-relative .graph-wallet-address .address-block {
-          padding-right: 15px;
-          flex: 1 0 auto; }
-        .admn-dashboard-sec .dashboard-tab-cover .db-tab-body .db-graph-card .db-graph-block.db-graph-block-relative .graph-wallet-address .copy-btn-def {
-          flex-shrink: 0; }
-        .admn-dashboard-sec .dashboard-tab-cover .db-tab-body .db-graph-card .db-graph-block.db-graph-block-relative .graph-wallet-address .close-btn {
+          margin-right: 8px;
+          margin-top: -2px; }
+        .admn-dashboard-sec .dashboard-tab-cover .db-tab-body .db-graph-card .graph-title-wrapper .right-block .select-block .grph-legend-dropdown .dropdown-item {
+          font-size: 12px; }
+        @media (max-width: 370px) {
+          .admn-dashboard-sec .dashboard-tab-cover .db-tab-body .db-graph-card .graph-title-wrapper .right-block .select-block .grph-legend-dropdown .dropdown-menu {
+            width: 100%; } }
+      .admn-dashboard-sec .dashboard-tab-cover .db-tab-body .db-graph-card .leg-wrapper {
+        justify-content: flex-end;
+        margin-bottom: 20px; }
+        .admn-dashboard-sec .dashboard-tab-cover .db-tab-body .db-graph-card .leg-wrapper .leg-item {
+          display: flex;
+          align-items: center;
+          font-size: 13px;
+          margin-bottom: 10px;
+          color: #2E4276; }
+          .admn-dashboard-sec .dashboard-tab-cover .db-tab-body .db-graph-card .leg-wrapper .leg-item:last-child {
+            margin-bottom: 0; }
+          .admn-dashboard-sec .dashboard-tab-cover .db-tab-body .db-graph-card .leg-wrapper .leg-item .leg-dot {
+            display: inline-block;
+            width: 7px;
+            height: 7px;
+            border-radius: 50%;
+            background-color: #2966FF;
+            margin-right: 15px; }
+            .admn-dashboard-sec .dashboard-tab-cover .db-tab-body .db-graph-card .leg-wrapper .leg-item .leg-dot.dot-grn {
+              background-color: #22F9B8; }
+          .admn-dashboard-sec .dashboard-tab-cover .db-tab-body .db-graph-card .leg-wrapper .leg-item img {
+            margin-left: 5px;
+            opacity: .5; }
+      .admn-dashboard-sec .dashboard-tab-cover .db-tab-body .db-graph-card .db-graph-block .graph-sm-col {
+        margin: 0 auto;
+        max-width: 360px; }
+      .admn-dashboard-sec .dashboard-tab-cover .db-tab-body .db-graph-card .db-graph-block.db-graph-block-relative {
+        position: relative; }
+        .admn-dashboard-sec .dashboard-tab-cover .db-tab-body .db-graph-card .db-graph-block.db-graph-block-relative .graph-wallet-address {
+          padding: 5px 12px;
+          border-radius: 6px;
           background-color: transparent;
-          border: none;
-          padding: 3px;
-          margin-right: 0; }
-          .admn-dashboard-sec .dashboard-tab-cover .db-tab-body .db-graph-card .db-graph-block.db-graph-block-relative .graph-wallet-address .close-btn img {
-            width: 15px; }
+          z-index: 9;
+          display: inline-flex;
+          align-items: center;
+          font-size: 14px;
+          color: #2E4276;
+          border: solid 1px #E3E4F3;
+          min-width: 35%; }
+          @media (max-width: 1679px) {
+            .admn-dashboard-sec .dashboard-tab-cover .db-tab-body .db-graph-card .db-graph-block.db-graph-block-relative .graph-wallet-address {
+              font-size: 13px; } }
+          .admn-dashboard-sec .dashboard-tab-cover .db-tab-body .db-graph-card .db-graph-block.db-graph-block-relative .graph-wallet-address .address-block {
+            padding-right: 15px;
+            flex: 1 0 auto; }
+          .admn-dashboard-sec .dashboard-tab-cover .db-tab-body .db-graph-card .db-graph-block.db-graph-block-relative .graph-wallet-address .copy-btn-def {
+            flex-shrink: 0; }
+          .admn-dashboard-sec .dashboard-tab-cover .db-tab-body .db-graph-card .db-graph-block.db-graph-block-relative .graph-wallet-address .close-btn {
+            background-color: transparent;
+            border: none;
+            padding: 3px;
+            margin-right: 0; }
+            .admn-dashboard-sec .dashboard-tab-cover .db-tab-body .db-graph-card .db-graph-block.db-graph-block-relative .graph-wallet-address .close-btn img {
+              width: 15px; }
 
 @media (max-width: 1679px) {
   .admn-dashboard-sec .admn-title {
