--- a/scss/staking.scss
+++ b/scss/staking.scss
@@ -1411,6 +1411,8 @@
             height: 100%;
             width: 100%;
             text-align: center;
+            display: flex;
+            flex-direction: column;
             .dur-itm-block{
                 width: 100%;
                 height: 50%;
@@ -1422,16 +1424,19 @@
                 align-items: center;
                 justify-content: center;
                 padding: 10px;
+                line-height: 20px;
                 span{
-                    font-weight: 700;
+                    font-weight: 600;
                 }
             }
             .apy-block{
                 background-color: $primary-blue;
                 color: #fff;
                 height: 45%;
+                max-height: 45px;
             }
             .dur-block{
+                flex-grow: 1;
                 flex-direction: column;
                 height: 55%;
             }
@@ -1631,7 +1636,8 @@
         padding: 15px;
     }
     .staking-card-block .progress-sm-sec .dur-cover .dur-itm-block{
-        font-size: 13px;
+        font-size: 12px;
+        line-height: 16px;
         min-height: 40px;
     }
     .staking-card-block .table-block-cover .table-card .tab-val{
@@ -1764,6 +1770,7 @@
 @media (max-width: 700px) {
     .staking-card-block .progress-sm-sec .dur-cover .dur-itm-block{
         font-size: 14px;
+        line-height: 19px;
     }
     .staking-card-block .progress-sm-sec .progress-col.progress-col-right{
         width: 35%;
