--- a/scss/dark-theme.scss
+++ b/scss/dark-theme.scss
@@ -795,7 +795,9 @@ $dark-block-2: #2B2C2E;
             background-color: #fff !important;
         }
         &:hover{
+            color: $primary-blue;
             border-color: $primary-light;
+            background-color: #fff !important;
         }
     }
     .login-wrapper .login-left-block .bottom-content .checkbox-container input:checked ~ .checkmark{
