--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1761,7 +1761,7 @@
         display: none; } }
     .portfolio-sec .portfolio-page-wrapper .portfolio-fluid-col .portfolio-card .card-table .mob-tr td {
       padding-top: 0; }
-    .portfolio-sec .portfolio-page-wrapper .portfolio-fluid-col .portfolio-card .card-table tr:nth-child(odd) td {
+    .portfolio-sec .portfolio-page-wrapper .portfolio-fluid-col .portfolio-card .card-table.my-stakes-table tr:nth-child(odd) td {
       border: none !important; }
     @media (max-width: 991px) {
       .portfolio-sec .portfolio-page-wrapper .portfolio-fluid-col .portfolio-card .card-table td.stakes-btn-td {
