--- a/css/dark-theme.css
+++ b/css/dark-theme.css
@@ -970,5 +970,15 @@
   .theme-dark :where(.css-apn68).ant-picker-dropdown .ant-picker-cell.ant-picker-cell-disabled {
     color: rgba(255, 255, 255, 0.25);
     opacity: 1 !important; }
+  .theme-dark .mystakes-col-mob .mystakes-card-cover .mystakes-card {
+    background-color: transparent;
+    border-color: #2F2F2F; }
+  .theme-dark .mystakes-col-mob .mystakes-card-cover .mystakes-card .item-label {
+    color: #8C8C8C; }
+  .theme-dark .mystakes-col-mob .mystakes-card-cover .mystakes-card .item-val {
+    color: #fff; }
+  .theme-dark .mystakes-col-mob .mystakes-card-cover .mystakes-card .title-block,
+  .theme-dark .mystakes-col-mob .mystakes-card-cover .mystakes-card .col-2-cover {
+    border-color: #2F2F2F; }
 
 /*# sourceMappingURL=dark-theme.css.map */
