--- a/scss/portfolio.scss
+++ b/scss/portfolio.scss
@@ -2198,3 +2198,114 @@
         }
     }
 }
+
+.mystakes-col-web{
+    @media ($sm-767) {
+        display: none;
+    }
+}
+
+.mystakes-col-mob{
+    margin-bottom: 30px !important;
+    padding-top: 15px;
+    @media (min-width: 767px) {
+        display: none;
+    }
+    .portfolio-card{
+        border: none !important;
+        padding: 0 !important;
+        background-color: transparent !important;
+        display: block !important;
+        border-radius: 0 !important;
+    }
+    .mystakes-card-cover{
+        .mystakes-card{
+            background-color: #fff;
+            border: 1px solid #E3E4F3;
+            border-radius: 14px;
+            margin-bottom: 18px;
+            .item-label{
+                color: $text-primary-light;
+                font-size: 13px;
+                margin-bottom: 4px;
+            }
+            .item-val{
+                color: $text-primary-dark;
+                font-size: 13px;
+                font-weight: 500;
+                margin-bottom: 0;
+            }
+            .title-block{
+                padding: 20px 25px;
+                position: relative;
+                border-bottom: solid 1px #E3E4F3;
+                @media (max-width: 400px) {
+                    padding: 20px 15px;
+                }
+                .apy-val{
+                    display: inline-block;
+                    position: absolute;
+                    right: 25px;
+                    top: 20px;
+                    font-size: 13px;
+                    color: #0DAD4D;
+                }
+            }
+            .col-2-cover{
+                padding: 18px 20px;
+                border-bottom: solid 1px #E3E4F3;
+                @media (max-width: 400px) {
+                    padding: 15px;
+                }
+                .col-2-wrapper{
+                    flex-wrap: wrap;
+                    .col-2-card{
+                        padding: 9px 5px;
+                        width: 50%;
+                        @media (max-width: 350px) {
+                            width: 100%;
+                        }
+                    }
+                }
+            }
+            .card-btn-block{
+                padding: 10px 25px 30px;
+                @media (max-width: 400px) {
+                    padding: 10px 15px 25px;
+                }
+                .stake-btn{
+                    width: 100%;
+                    color: #fff;
+                    background-color: $primary-blue;
+                    border-radius: 6px;
+                    font-size: 13px;
+                    font-weight: 500;
+                    padding: 14px 15px;
+                    transition: .3s;
+                    &:hover{
+                        opacity: .8;
+                    }
+                    &.unstake-btn{
+                        background-color: #EE8728;
+                        margin-top: 18px;
+                    }
+                }
+            }
+        }
+    }
+    .mystakes-pagination{
+        .table-pagination-cover{
+            padding: 20px 0;
+            border: none;
+            margin-top: 0 !important;
+            @media (max-width: 400px) {
+                padding: 15px 0;
+            }
+            .pagination-block{
+                justify-content: center !important;
+                margin: 0 auto;
+                padding-top: 0 !important;
+            }
+        }
+    }
+}
