--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -955,10 +955,19 @@
       background-color: #2966FF;
       margin-right: 8px; }
     .portfolio-page-wrapper .portfolio-staked-graph-block .graph-btn-right .bottom-lgd .grph-legend-dropdown .dropdown-item {
-      font-size: 12px; }
+      font-size: 12px;
+      word-break: break-word;
+      white-space: unset; }
+      @media (max-width: 579px) {
+        .portfolio-page-wrapper .portfolio-staked-graph-block .graph-btn-right .bottom-lgd .grph-legend-dropdown .dropdown-item {
+          font-size: 11px; } }
+    @media (max-width: 767px) {
+      .portfolio-page-wrapper .portfolio-staked-graph-block .graph-btn-right .bottom-lgd .grph-legend-dropdown .dropdown-menu.dropdown-menu-end {
+        left: 0 !important; } }
     @media (max-width: 370px) {
       .portfolio-page-wrapper .portfolio-staked-graph-block .graph-btn-right .bottom-lgd .grph-legend-dropdown .dropdown-menu {
-        width: 100%; } }
+        width: 100%;
+        min-width: 250px; } }
     .portfolio-page-wrapper .portfolio-staked-graph-block .graph-btn-right .grph-select {
       border-radius: 6px;
       border: 1px solid #E3E4F3;
