--- a/css/side-nav.css
+++ b/css/side-nav.css
@@ -381,6 +381,7 @@
     position: fixed;
     top: 60px;
     width: 100%;
+    max-width: 100vw;
     background-color: #fff;
     left: 0;
     top: -100vh;
