--- a/scss/portfolio.scss
+++ b/scss/portfolio.scss
@@ -1192,10 +1192,21 @@
                     }
                     .dropdown-item{
                         font-size: 12px;
+                        word-break: break-word;
+                        white-space: unset;
+                        @media (max-width: 579px) {
+                            font-size: 11px;
+                        }
                     }
                     .dropdown-menu{
+                        &.dropdown-menu-end{
+                            @media (max-width: 767px) {
+                                left: 0 !important;
+                            }
+                        }
                         @media (max-width: 370px) {
                             width: 100%;
+                            min-width: 250px;
                         }
                     }
                 }
