--- a/scss/side-nav.scss
+++ b/scss/side-nav.scss
@@ -459,6 +459,7 @@
         position: fixed;
         top: 60px;
         width: 100%;
+        max-width: 100vw;
         background-color: $primary-light;
         left: 0;
         top: -100vh;
